@@ -1,3 +1,6 @@
+2006-08-24  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_GrampsInMemDB.py: update maps properly on commit
+
 2006-08-24  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/EventCmp.py: Remove sorting columns for saving.
 	* src/plugins/PHPGedViewConnector.py: Disable registration, until
